<resources>
    <string name="app_name">Senate Channel</string>
    <string name="context_menu">Context menu</string>
    <string name="btn_close">CLOSE</string>
    <string name="txt_underconstruction">UNDERCONSTRUCTION</string>
    <string name="txt_back_to_exit">Please click BACK again to exit.</string>
    <string name="error_server">Connection Error.</string>

    <string name="txt_title">สำนักงานเลขาธิการวุฒิสภา</string>
    <string name="btn_share">แชร์</string>

    <!-- Menu -->
    <string name="menu_news">News</string>
    <string name="menu_live_tv">IPTV1</string>
    <string name="menu_ebook">E-Book</string>
    <string name="menu_radio">NLA Radio</string>
    <string name="menu_legislation">Legislation</string>
    <string name="menu_digital_book">Book</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_about">About</string>

    <!-- Live -->
    <string name="btn_live">รายการสด</string>
    <string name="btn_vod">ย้อนหลัง</string>

    <!-- News Temporary -->
    <string name="btn_nla">สภานิติบัญญัติแห่งชาติ</string>
    <string name="btn_committee">คณะกรรมาธิการ</string>
    <string name="btn_senate">สำนักงานเลขาธิการวุฒิสภา</string>

    <!-- EBook -->
    <string name="ebook_pdf">PDF</string>
    <string name="ebook_digital">Digital</string>

    <!-- Privacy -->
    <string name="privacy_detail"><b>๑. วัตถุประสงค์</b>\n
 สำนักงานเลขาธิการวุฒิสภาได้จัดทำเว็บไซต์ขึ้นเพื่อให้บริการข้อมูลข่าวสารแก่สมาชิกรัฐสภา หน่วยงานภาครัฐ ภาคเอกชน บุคลากรในวงงานรัฐสภา และประชาชนทั่วไป ในการใช้บริการเว็บไซต์ของผู้ใช้บริการจะอยู่ภายใต้เงื่อนไขและข้อกำหนดดังต่อไปนี้ ผู้ใช้บริการจึงควรศึกษาเงื่อนไข และข้อกำหนดการใช้งานเว็บไซต์ และ/หรือเงื่อนไขและข้อตกลงอื่นใดที่สำนักงานเลขาธิการวุฒิสภาได้แจ้งให้ทราบบนเว็บไซต์โดยละเอียดก่อนการเข้าใช้บริการ ทั้งนี้ ในการใช้บริการให้ถือว่าผู้ใช้บริการได้ตกลงที่จะปฏิบัติตามเงื่อนไขและข้อกำหนดการให้บริการที่กำหนดไว้นี้ หากผู้ใช้บริการไม่ประสงค์ที่จะผูกพันตามข้อกำหนดและเงื่อนไขการให้บริการ ขอความกรุณาท่านยุติการเข้าชมและใช้งานเว็บไซต์นี้ในทันที\n
<b>๒. เงื่อนไขและข้อกำหนดการใช้งานเว็บไซต์</b>\n
 ๒.๑ ผู้ใช้บริการอาจได้รับ เข้าถึง สร้าง ส่งหรือแสดงข้อมูล เช่น ไฟล์ข้อมูล ข้อความลายลักษณ์อักษร ซอฟต์แวร์คอมพิวเตอร์ ดนตรี ไฟล์เสียง หรือเสียงอื่น ๆ ภาพถ่าย วิดีโอ หรือรูปภาพอื่น ๆ โดยเป็นส่วนหนึ่งของบริการหรือโดยผ่านการใช้บริการ ซึ่งต่อไปนี้จะเรียกว่า “เนื้อหา”\n
 ๒.๒ เนื้อหาที่นำเสนอต่อผู้ใช้บริการ อาจได้รับการคุ้มครองโดยสิทธิในทรัพย์สินทางปัญญาของเจ้าของเนื้อหานั้น ผู้ใช้บริการไม่มีสิทธิเปลี่ยนแปลงแก้ไข จำหน่ายจ่ายโอนหรือสร้างผลงานต่อเนื่องโดยอาศัยเนื้อหาดังกล่าวไม่ว่าจะทั้งหมดหรือบางส่วน เว้นแต่ผู้ใช้บริการจะได้รับอนุญาตโดยชัดแจ้งจากเจ้าของเนื้อหานั้น\n
 ๒.๓ ผู้ใช้บริการอาจพบเนื้อหาที่ไม่เหมาะสม หรือหยาบคาย อันก่อให้เกิดความไม่พอใจ ภายใต้ความเสี่ยงของตนเอง\n
 ๒.๔ สำนักงานเลขาธิการวุฒิสภาทรงไว้ซึ่งสิทธิในการคัดกรอง ตรวจทาน ทำเครื่องหมาย เปลี่ยนแปลงแก้ไข ปฏิเสธ หรือลบเนื้อหาใด ๆ ที่ไม่เหมาะสมออกจากบริการ ซึ่งสำนักงานเลขาธิการวุฒิสภาอาจจัดเตรียมเครื่องมือในการคัดกรองเนื้อหาอย่างชัดเจน โดยไม่ขัดต่อกฎหมาย กฎระเบียบของทางราชการที่เกี่ยวข้อง\n
 ๒.๕ สำนักงานเลขาธิการวุฒิสภาอาจหยุดให้บริการเป็นการชั่วคราวหรือถาวร หรือยกเลิกการให้บริการแก่ผู้ใช้บริการรายใดเป็นการเฉพาะ หากการให้บริการดังกล่าวส่งผลกระทบต่อผู้ใช้บริการอื่น ๆ หรือขัดแย้งต่อกฎหมาย โดยไม่ต้องแจ้งให้ผู้ใช้บริการทราบล่วงหน้า\n
 ๒.๖ การหยุดหรือการยกเลิกบริการตามข้อ ๒.๕ ผู้ใช้บริการจะไม่สามารถเข้าใช้บริการ และเข้าถึงรายละเอียดบัญชีของผู้ใช้บริการ ไฟล์เอกสารใด ๆ หรือเนื้อหาอื่น ๆ ที่อยู่ในบัญชีของผู้ใช้บริการได้\n
 ๒.๗ ในกรณีที่สำนักงานเลขาธิการวุฒิสภาหยุดให้บริการเป็นการถาวร หรือยกเลิกบริการ\n
แก่ผู้ใช้บริการ สำนักงานเลขาธิการวุฒิสภามีสิทธิในการลบข้อมูลต่าง ๆ ที่อยู่ในบัญชีของผู้ใช้บริการได้ โดยไม่ต้องแจ้งให้ผู้ใช้บริการทราบล่วงหน้า\n
\n
<b>๓. สิทธิ หน้าที่ และความรับผิดชอบของผู้ใช้บริการ</b>\n
 ๓.๑ ผู้ใช้บริการจะให้ข้อมูลเกี่ยวกับตนเอง เช่น ข้อมูลระบุตัวตนหรือรายละเอียดการติดต่อ\n
ที่ถูกต้อง เป็นจริง และเป็นปัจจุบันเสมอ แก่สำนักงานเลขาธิการวุฒิสภา อันเป็นส่วนหนึ่งของกระบวนการลงทะเบียนใช้บริการ หรือการใช้บริการที่ต่อเนื่อง\n
 ๓.๒ ผู้ใช้บริการจะใช้บริการเว็บไซต์นี้ เพื่อวัตถุประสงค์ที่ได้รับอนุญาตตามข้อกำหนดของสำนักงานเลขาธิการวุฒิสภา และไม่ขัดต่อกฎหมาย กฎ ระเบียบ ข้อบังคับ หลักปฏิบัติที่เป็นที่ยอมรับโดยทั่วไป\n
 ๓.๓ ผู้ใช้บริการจะไม่เข้าใช้หรือพยายามเข้าใช้บริการหนึ่งบริการใดโดยวิธีอื่น รวมถึงการใช้วิธีการอัตโนมัติ (การใช้สคริปต์) นอกจากช่องทางที่สำนักงานเลขาธิการวุฒิสภาจัดเตรียมไว้ให้ เว้นแต่ผู้ใช้บริการจะได้รับอนุญาตจากสำนักงานเลขาธิการวุฒิสภาโดยชัดแจ้งให้ทำเช่นนั้นได้\n
 ๓.๔ ผู้ใช้บริการจะไม่ทำหรือมีส่วนร่วมในการขัดขวางหรือรบกวนบริการของสำนักงานเลขาธิการวุฒิสภา รวมทั้งเครื่องแม่ข่ายและเครือข่ายที่เชื่อมต่อกับบริการ\n
 ๓.๕ ผู้ใช้บริการจะไม่ทำสำเนา คัดลอก ทำซ้ำ ขาย แลกเปลี่ยน หรือขายต่อบริการเพื่อวัตถุประสงค์ใด ๆ เว้นแต่ผู้ใช้บริการจะได้รับอนุญาตจากสำนักงานเลขาธิการวุฒิสภาโดยชัดแจ้งให้ทำเช่นนั้นได้\n
 ๓.๖ ผู้ใช้บริการมีหน้าที่ในการรักษาความลับของรหัสผ่านที่เชื่อมโยงกับบัญชีใด ๆ ที่ใช้ในการเข้าถึงบริการ\n
 ๓.๗ ผู้ใช้บริการจะเป็นผู้รับผิดชอบแต่เพียงผู้เดียวต่อบุคคลใด ๆ รวมถึงสำนักงานเลขาธิการวุฒิสภา ในความเสียหายอันเกิดจากการละเมิดข้อกำหนด\n
<b>๔. การเชื่อมโยงกับเว็บไซต์อื่น ๆ</b>\n
 ๔.๑ การเชื่อมโยงไปยังเว็บไซต์อื่นเป็นเพียงการให้บริการเพื่ออำนวยความสะดวกแก่ผู้ใช้บริการเท่านั้น สำนักงานเลขาธิการวุฒิสภามิได้มีส่วนเกี่ยวข้องหรือมีอำนาจควบคุม รับรอง ความถูกต้อง ความน่าเชื่อถือ ตลอดจนความรับผิดชอบในเนื้อหาข้อมูลของเว็บไซต์นั้น ๆ\n
 ๔.๒ กรณีต้องการเชื่อมโยงมายังเว็บไซต์ของสำนักงานเลขาธิการวุฒิสภา ผู้ใช้บริการสามารถเชื่อมโยงมายังหน้าแรกของเว็บไซต์ของสำนักงานเลขาธิการวุฒิสภาได้ โดยแจ้งความประสงค์เป็นหนังสือ แต่หากต้องการเชื่อมโยงมายังหน้าภายในของเว็บไซต์นี้ จะต้องได้รับความยินยอมเป็นหนังสือจากสำนักงานเลขาธิการวุฒิสภาแล้วเท่านั้น และในการให้ความยินยอมดังกล่าว สำนักงานเลขาธิการวุฒิสภาขอสงวนสิทธิที่จะกำหนดเงื่อนไขใด ๆ ไว้ด้วยก็ได้ ในการที่เว็บไซต์อื่นที่เชื่อมโยงมายังเว็บไซต์ของสำนักงานเลขาธิการวุฒิสภา จะไม่รับผิดชอบต่อเนื้อหาใด ๆ ที่แสดงบนเว็บไซต์ที่เชื่อมโยงมายังเว็บไซต์ของสำนักงานเลขาธิการวุฒิสภา หรือต่อความเสียหายใด ๆ ที่เกิดขึ้นจากการใช้เว็บไซต์เหล่านั้น\n
<b>๕. การปฏิเสธความรับผิด</b>\n
 ๕.๑ สำนักงานเลขาธิการวุฒิสภาจะไม่รับผิดต่อความเสียหายใด ๆ รวมถึง ความเสียหาย สูญเสียและค่าใช้จ่ายที่เกิดขึ้นไม่ว่าโดยตรงหรือโดยอ้อม ที่เป็นผลหรือสืบเนื่องจากการที่ผู้ใช้เข้าใช้เว็บไซต์นี้หรือเว็บไซต์ที่เชื่อมโยงกับเว็บไซต์นี้ หรือต่อความเสียหาย สูญเสียหรือค่าใช้จ่ายที่เกิดจากความล้มเหลวในการ\n
ใช้งาน ความผิดพลาด การละเว้น การหยุดชะงัก ข้อบกพร่อง ความไม่สมบูรณ์ คอมพิวเตอร์ไวรัส ถึงแม้ว่าสำนักงานเลขาธิการวุฒิสภาจะได้รับแจ้งว่าอาจจะเกิดความเสียหาย สูญเสียหรือค่าใช้จ่ายดังกล่าวขึ้น นอกจากนี้ สำนักงานเลขาธิการวุฒิสภาไม่รับผิดต่อผู้ใช้เว็บไซต์หรือบุคคลจากการเรียกร้องใด ๆ ที่เกิดขึ้นจากบนเว็บไซต์ หรือเนื้อหาใด ๆ ซึ่งรวมถึงการตัดสินใจหรือการกระทำใด ๆ ที่เกิดจากความเชื่อถือในเนื้อหาดังกล่าวของผู้ใช้เว็บไซต์ หรือในความเสียหายใด ๆ ไม่ว่าความเสียหายทางตรง หรือทางอ้อม รวมถึงความเสียหายอื่นใดที่อาจเกิดขึ้นได้ผู้ใช้บริการยอมรับและตระหนักดีว่า สำนักงานเลขาธิการวุฒิสภาจะ\n
ไม่ต้องรับผิดชอบต่อการกระทำใดของผู้ใช้บริการทั้งสิ้น\n
<b>๖. กรรมสิทธิ์ิ์และสิทธิในทรัพย์สินทางปัญญา</b>\n
 ๖.๑ สำนักงานเลขาธิการวุฒิสภาหรือผู้ให้อนุญาตแก่สำนักงานเลขาธิการวุฒิสภา เป็นผู้มีสิทธิตามกฎหมายแต่เพียงผู้เดียวใน กรรมสิทธิ์ ผลประโยชน์ทั้งหมด รวมถึงสิทธิในทรัพย์สินทางปัญญาใด ๆ ที่มีอยู่ในบริการซึ่งสำนักงานเลขาธิการวุฒิสภา หรือผู้ให้อนุญาตแก่สำนักงานเลขาธิการวุฒิสภา เป็นผู้จัดทำขึ้น\n
ไม่ว่าสิทธิเหล่านั้นจะได้รับการจดทะเบียนไว้หรือไม่ก็ตาม\n
 ๖.๒ ผู้ใช้บริการจะต้องไม่เปิดเผยข้อมูลที่สำนักงานเลขาธิการวุฒิสภากำหนดให้เป็นความลับ โดยไม่ได้รับความยินยอมเป็นลายลักษณ์อักษรล่วงหน้าจากสำนักงานเลขาธิการวุฒิสภา\n
 ๖.๓ ผู้ใช้บริการจะต้องไม่ใช้ชื่อทางการค้า เครื่องหมายการค้า เครื่องหมายการบริการ ตราสัญลักษณ์ ชื่อโดเมนของสำนักงานเลขาธิการวุฒิสภา โดยไม่ได้รับความยินยอมเป็นลายลักษณ์อักษรจากสำนักงานเลขาธิการวุฒิสภา\n
<b>๗. กฎหมายที่ใช้บังคับ</b>\n
 ๗.๑ การตีความ และการบังคับตามเงื่อนไขการให้บริการฉบับนี้ ให้เป็นไปตามกฎหมายไทย\n
\n
</string>

    <!-- About -->
    <string name="about_detail">ลิขสิทธิ์ © 2560 สภานิติบัญญัติแห่งชาติ \n The National Legislative Assembly</string>

</resources>
