<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="@color/colorBackgroundSubtitle">

        <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
            android:id="@+id/btn01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"
            android:gravity="center"
            android:text="@string/btn_nla"
            android:textSize="10sp"
            android:background="@drawable/custom_white_border_button"/>

        <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
            android:id="@+id/btn02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"
            android:gravity="center"
            android:text="@string/btn_committee"
            android:textSize="10sp"
            android:background="@drawable/custom_white_border_button"/>

        <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
            android:id="@+id/btn03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"
            android:gravity="center"
            android:text="@string/btn_senate"
            android:textSize="10sp"
            android:background="@drawable/custom_white_border_button"/>

    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutButton"
        android:scrollbars="none"
        android:divider="@color/divider_color"
        android:dividerHeight="1dp"></WebView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />
</RelativeLayout>