<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SenateChannelHomeV2">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imgTitle"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:adjustViewBounds="true"
                        android:layout_gravity="center|left"
                        android:src="@mipmap/img_logo_01"/>

                    <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
                        android:id="@+id/toolbarTitle"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/imgTitle"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="8dp"
                        android:text="@string/txt_title"/>

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/navigation"
            android:layout_below="@+id/appBar"
            android:animateLayoutChanges="true">
        </FrameLayout>

        <HorizontalScrollView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimaryDark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/btnLiveTV"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@mipmap/ic_live_tv_01"
                        android:layout_gravity="center"/>

                    <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/menu_live_tv"
                        android:textColor="@color/color_white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/btnNews"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@mipmap/ic_news_01"
                        android:layout_gravity="center"/>

                    <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/menu_news"
                        android:textColor="@color/color_white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/btnRadio"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@mipmap/ic_radio_01"
                        android:layout_gravity="center"/>

                    <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/menu_radio"
                        android:textColor="@color/color_white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/btnLegislation"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@mipmap/ic_legislation_01"
                        android:layout_gravity="center"/>

                    <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/menu_legislation"
                        android:textColor="@color/color_white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/btnBook"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@mipmap/ic_digital_book_01"
                        android:layout_gravity="center"/>

                    <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/menu_digital_book"
                        android:textColor="@color/color_white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/btnPrivacy"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@mipmap/ic_privacy_01"
                        android:layout_gravity="center"/>

                    <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/menu_privacy"
                        android:textColor="@color/color_white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/btnAbout"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@mipmap/ic_about_01"
                        android:layout_gravity="center"/>

                    <com.dooplus.keng.tvsenate.customview.SukhumvitTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/menu_about"
                        android:textColor="@color/color_white"/>

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>